Bug 151470 - OLE preview images are getting lost after opening
Summary: OLE preview images are getting lost after opening
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All Windows (All)
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.5.0 target:7.4.3
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-11 14:48 UTC by Miklos Vajna
Modified: 2022-10-17 10:28 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Original bugdoc (49.16 KB, application/vnd.oasis.opendocument.text)
2022-10-11 14:48 UTC, Miklos Vajna
Details
Corrupted document after save. (71.87 KB, application/vnd.oasis.opendocument.text)
2022-10-11 14:49 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2022-10-11 14:48:11 UTC
Created attachment 182974 [details]
Original bugdoc

Steps to reproduce the problem:

1) Open the attached document on Windows. It contains an embedded object (PDF), so make sure that Adobe Acrobat Reader is installed.

2) Double-click on the embedded object to open it in Adobe Acrobat.

3) Close Acrobat.

4) Save the document.

5) Close & open the document.

Expected result: the preview is similar to the initial one, since no change was made.

Actual result: the preview is broken.
Comment 1 Miklos Vajna 2022-10-11 14:49:11 UTC
Created attachment 182975 [details]
Corrupted document after save.

How it looks after saving. The documents can be checked also on Linux, but the problematic codepath to corrupt it is Windows-specific.
Comment 2 Commit Notification 2022-10-11 16:50:45 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0bd83ba4c40bd7c3ebd3f098421c23bc9ced7b9e

tdf#151470 svtools: prevent storing broken graphic of embedded objects

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2022-10-17 10:28:20 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/165a0ea595b86c448396bb3826513d54f84640aa

tdf#151470 svtools: prevent storing broken graphic of embedded objects

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.